--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-AI/dataset/glowup.ipynb
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Django
+db.sqlite3
+.env
+media/
+static/ 
+
+# React / Node
+node_modules/
+dist/
+build/
+.DS_Store
